Added X-Registry-Auth header for swarm container create
